# python-csql

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  README.rst  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml
.circleci/: config.yml  publish.sh  version.sh
.github/workflows/: ci.yml
csql/: __init__.py  api.py  asthackery.py  dialect.py  overrides.py  persist.py  test.py  utils.py
csql/_/: api.py  utils.py
csql/_/cacher/: __init__.py  cacher.py
csql/_/input/: strparsing.py
csql/_/models/: dialect.py  overrides.py  persisted_query.py  query.py  query_replacers.py
csql/_/persist/: __init__.py
csql/_/renderer/: parameters.py  query.py
csql/contrib/: __init__.py
csql/contrib/cacher/: __init__.py
csql/contrib/persist/: __init__.py  snowflake.py
csql/contrib/render/: __init__.py
csql/contrib/render/param/: UDFParamRenderer.py  __init__.py
csql/input/: asthackery.py  strparsing.py
csql/models/: dialect.py  query.py
csql/render/: param.py  query.py
csql/renderer/: parameters.py  query.py
docs/: Makefile  _toc.yml  api.rst  api_contrib.rst  api_dialect.rst  api_persist.rst  changelog.rst  conf.py  docutils.conf  index.rst
docs/_static/css/: custom.css
docs/extensions/: csql_docs.py
notebooks/: melbourne_crime.xlsx  test.py  test_ch.py
tests/: conftest.py  qFixture.py  test_Q.py  test_Q_asthackery.py  test_Q_cte.py  test_Q_functional.py  test_Q_input_asthackery.py  test_Q_input_strparsing.py  test_Q_parameters.py  test_Q_reparameterization.py  test_overrides.py  test_paramlist.py  test_persist.py  test_render.py  test_replace_stuff.py
tests/contrib/: test_udfparamrenderer.py
