[project]
name = "csql"
version = "0.11.0"
description = "Simple library for writing composeable SQL queries"
authors = [{ name = "Jarrad Whitaker", email = "akdor1154@gmail.com" }]
requires-python = ">=3.8,<4"
readme = "README.md"
license = "LGPL-3.0-or-later"
keywords = [
    "sql",
    "analytics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Topic :: Database",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3.4"]
notebooks = [
    "openpyxl>=3.0.9",
    "duckdb>=0.3.1",
    "ipykernel>=6.6.0",
]
docs = [
    "Sphinx>=4.3.1,<5",
    "sphinx-autobuild>=2021.3.14,<2022",
    "sphinx-rtd-theme>=1.0.0,<2",
    "sphinx-external-toc>=0.2.3,<0.3",
    "myst-parser[linkify]>=0.16.1,<0.17",
    "pandas>=1.3.4",
    "snowflake-connector-python>=2.7.2",
]

[project.urls]
Homepage = "https://github.com/akdor1154/python-csql"
Repository = "https://github.com/akdor1154/python-csql"

[dependency-groups]
dev = [
    "pytest>=6.1.1,<7",
    "mypy>=0.910,<0.911",
    "pandas>=1.3.4",
]

[tool.uv]

[tool.uv.build-backend]
module-name = "csql"
module-root = ""
source-include = ["LICENCE.md"]

[build-system]
requires = ["uv_build>=0.11.12,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
log_cli_level="DEBUG"
